--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,7 +24,6 @@ jobs:
       - name: Run tests
         run: npm test
 
-
   security-scan:
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -41,7 +40,6 @@ jobs:
           args: --severity-threshold=high
         continue-on-error: true
 
-
   docker-build-push:
     runs-on: ubuntu-latest
     needs: [build-and-test, security-scan]
@@ -49,6 +47,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -62,6 +63,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/thisismynedpass123:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/thisismynedpass123:${{ github.sha }}
-
+            thisismynedpass123/devsecops:latest
+            thisismynedpass123/devsecops:${{ github.sha }}
